:api: Accept changes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon",
-    "test": "mocha --exce nodemon "
+    "test": "mocha --exce nodemon ",
+    "prod": "nodemon ./bin/www"
+    
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
